// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Multi Step Progress Basic Multi Step Progress (With Closing Drawer) 1`] = `
Array [
  .c10 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c23 {
  padding-left: 44px;
  padding-right: 12px;
}

.c27 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c32 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 {
  box-sizing: border-box;
}

.c12 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c15 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #00D200;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c34 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c16 {
  fill: #FFFFFF;
}

.c35 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c25 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c26 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c24 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c24,
.c24[type='button'],
.c24[type='reset'],
.c24[type='submit'] {
  -webkit-appearance: button;
}

.c24::-moz-focus-inner,
.c24[type='button']::-moz-focus-inner,
.c24[type='reset']::-moz-focus-inner,
.c24[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c24:-moz-focusring,
.c24[type='button']:-moz-focusring,
.c24[type='reset']:-moz-focusring,
.c24[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14 {
  position: absolute;
  top: 12px;
  left: 12px;
}

.c19 {
  width: 24px;
  height: 24px;
  background-color: #0046FF;
  color: #FFFFFF;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c28 {
  width: 24px;
  height: 24px;
  background-color: #EBEBE8;
  color: #A0A09B;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  list-style: none;
  margin: 0;
  padding: 0;
  padding-bottom: 12px;
}

.c22 {
  display: block;
}

.c22 + .c21 {
  padding-top: 8px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c30 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c5::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c17 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c17::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 1;
}

.c11 {
  position: relative;
}

.c7 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c31 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c31 > span {
  width: 100%;
}

.c1 {
  background: transparent;
}

@media (min-width:760px) {
  .c10 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c23 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c27 {
    padding-left: 52px;
  }
}

@media not all and (min-width:976px) {
  .c2 {
    display: none;
  }
}

@media not all and (max-width:975px) {
  .c29 {
    display: none;
  }
}

@media (min-width:760px) {
  .c14 {
    left: 20px;
  }
}

@media (max-width:975px) {
  .c5 + .c4 {
    border-top: 1px solid #EBEBE8;
  }
}

@media (min-width:976px) {
  .c5 + .c4 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c17 + .c4 {
    border-top: 1px solid #EBEBE8;
  }
}

@media (min-width:976px) {
  .c17 + .c4 {
    margin-top: 8px;
  }
}

<div
    className="c0 c1"
  >
    <div
      aria-label="Progress"
      role="group"
    >
      <div
        className="c2"
      >
        <ol
          className="c3"
        >
          <li
            className="c4 c5"
          >
            <button
              className="NormalizedButton__Button-ey7f5x-0 c6 c7"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c8"
              >
                <span
                  className="c9"
                >
                  <div
                    className="c10 c11"
                  >
                    <div
                      className="c12"
                    >
                      Completed
                    </div>
                    <span
                      aria-hidden={true}
                      className="c13 c14"
                    >
                      <svg
                        aria-hidden="true"
                        className="c15"
                        focusable="false"
                        preserveAspectRatio="xMidYMid meet"
                        role="presentation"
                        viewBox="0 0 92 92"
                      >
                        <path
                          d="M46 91.5c25.4050985 0 46-20.3710439 46-45.5S71.4050985.5 46 .5 0 20.8710439 0 46s20.5949015 45.5 46 45.5z"
                        />
                        <path
                          d="M63.1517377 34l3.573537 3.5568749L42.1676463 62l-14.870943-14.8016051 3.573537-3.5568749 11.297406 11.2447302z"
                          fill="#FFF"
                        />
                        <polygon
                          className="c16"
                          points="13.695 6 15 7.314 8.696 13.69 5 9.924 6.319 8.656 8.696 11.059"
                        />
                      </svg>
                    </span>
                    Investment objective
                  </div>
                </span>
              </span>
            </button>
          </li>
          <li
            className="c4 c17"
          >
            <button
              className="NormalizedButton__Button-ey7f5x-0 c6 c7"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c8"
              >
                <span
                  className="c18"
                >
                  <div
                    className="c10 c11"
                  >
                    <span
                      aria-hidden={true}
                      className="c13 c14"
                    >
                      <span
                        className="c19"
                      >
                        2
                      </span>
                    </span>
                    Time and risk
                  </div>
                </span>
              </span>
            </button>
            <ol
              className="c20"
            >
              <li
                className="c21 c22"
              >
                <div
                  className="c23"
                >
                  <button
                    className="NormalizedButton__Button-ey7f5x-0 c24"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="c8"
                    >
                      <span
                        className="c25"
                      >
                        <div
                          className="c12"
                        >
                          Completed
                        </div>
                        Investment period
                      </span>
                    </span>
                  </button>
                </div>
              </li>
              <li
                className="c21 c22"
              >
                <div
                  className="c23"
                >
                  <button
                    className="NormalizedButton__Button-ey7f5x-0 c24"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="c8"
                    >
                      <span
                        className="c13"
                      >
                        <div
                          className="c12"
                        >
                          Not completed
                        </div>
                        Frequency
                      </span>
                    </span>
                  </button>
                </div>
              </li>
              <li
                className="c21 c22"
              >
                <div
                  className="c23"
                >
                  <span
                    className="c25"
                  >
                    <div
                      className="c12"
                    >
                      Not completed
                    </div>
                    Amount
                  </span>
                </div>
              </li>
            </ol>
          </li>
          <li
            className="c4 c5"
          >
            <span
              className="c26"
            >
              <div
                className="c27 c11"
              >
                <div
                  className="c12"
                >
                  Not completed
                </div>
                <span
                  aria-hidden={true}
                  className="c13 c14"
                >
                  <span
                    className="c28"
                  >
                    3
                  </span>
                </span>
                Allocations
              </div>
            </span>
          </li>
        </ol>
      </div>
      <div
        className="c29"
      >
        <ol
          className="c30"
        >
          <li
            className="c4 c17"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c6 c31"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c8"
              >
                <span
                  className="c18"
                >
                  <div
                    className="c10 c11"
                  >
                    <div
                      className="c32"
                    >
                      <div
                        className="c33"
                      >
                        <span
                          aria-hidden={true}
                          className="c13 c14"
                        >
                          <span
                            className="c19"
                          >
                            2
                          </span>
                        </span>
                        Time and risk
                      </div>
                      <div
                        className="c33"
                      >
                        <svg
                          aria-hidden="true"
                          className="c34 c35"
                          direction="down"
                          focusable="false"
                          preserveAspectRatio="xMidYMid meet"
                          role="presentation"
                          viewBox="0 0 16 16"
                        >
                          <polygon
                            points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </span>
              </span>
            </button>
          </li>
        </ol>
      </div>
    </div>
  </div>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {
  .c0 {
    display: none;
  }
}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Multi Step Progress Basic Multi Step Progress 1`] = `
Array [
  .c10 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c23 {
  padding-left: 44px;
  padding-right: 12px;
}

.c27 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c32 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 {
  box-sizing: border-box;
}

.c12 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c15 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 24px;
  height: 24px;
  fill: #00D200;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c34 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c16 {
  fill: #FFFFFF;
}

.c35 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c25 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c26 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c24 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c24,
.c24[type='button'],
.c24[type='reset'],
.c24[type='submit'] {
  -webkit-appearance: button;
}

.c24::-moz-focus-inner,
.c24[type='button']::-moz-focus-inner,
.c24[type='reset']::-moz-focus-inner,
.c24[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c24:-moz-focusring,
.c24[type='button']:-moz-focusring,
.c24[type='reset']:-moz-focusring,
.c24[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14 {
  position: absolute;
  top: 12px;
  left: 12px;
}

.c19 {
  width: 24px;
  height: 24px;
  background-color: #0046FF;
  color: #FFFFFF;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c28 {
  width: 24px;
  height: 24px;
  background-color: #EBEBE8;
  color: #A0A09B;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  list-style: none;
  margin: 0;
  padding: 0;
  padding-bottom: 12px;
}

.c22 {
  display: block;
}

.c22 + .c21 {
  padding-top: 8px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c30 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c5::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c17 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c17::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 1;
}

.c11 {
  position: relative;
}

.c7 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c31 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c31 > span {
  width: 100%;
}

.c1 {
  background: transparent;
}

@media (min-width:760px) {
  .c10 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c23 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c27 {
    padding-left: 52px;
  }
}

@media not all and (min-width:976px) {
  .c2 {
    display: none;
  }
}

@media not all and (max-width:975px) {
  .c29 {
    display: none;
  }
}

@media (min-width:760px) {
  .c14 {
    left: 20px;
  }
}

@media (max-width:975px) {
  .c5 + .c4 {
    border-top: 1px solid #EBEBE8;
  }
}

@media (min-width:976px) {
  .c5 + .c4 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c17 + .c4 {
    border-top: 1px solid #EBEBE8;
  }
}

@media (min-width:976px) {
  .c17 + .c4 {
    margin-top: 8px;
  }
}

<div
    className="c0 c1"
  >
    <div
      aria-label="Progress"
      role="group"
    >
      <div
        className="c2"
      >
        <ol
          className="c3"
        >
          <li
            className="c4 c5"
          >
            <button
              className="NormalizedButton__Button-ey7f5x-0 c6 c7"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c8"
              >
                <span
                  className="c9"
                >
                  <div
                    className="c10 c11"
                  >
                    <div
                      className="c12"
                    >
                      Completed
                    </div>
                    <span
                      aria-hidden={true}
                      className="c13 c14"
                    >
                      <svg
                        aria-hidden="true"
                        className="c15"
                        focusable="false"
                        preserveAspectRatio="xMidYMid meet"
                        role="presentation"
                        viewBox="0 0 92 92"
                      >
                        <path
                          d="M46 91.5c25.4050985 0 46-20.3710439 46-45.5S71.4050985.5 46 .5 0 20.8710439 0 46s20.5949015 45.5 46 45.5z"
                        />
                        <path
                          d="M63.1517377 34l3.573537 3.5568749L42.1676463 62l-14.870943-14.8016051 3.573537-3.5568749 11.297406 11.2447302z"
                          fill="#FFF"
                        />
                        <polygon
                          className="c16"
                          points="13.695 6 15 7.314 8.696 13.69 5 9.924 6.319 8.656 8.696 11.059"
                        />
                      </svg>
                    </span>
                    Investment objective
                  </div>
                </span>
              </span>
            </button>
          </li>
          <li
            className="c4 c17"
          >
            <button
              className="NormalizedButton__Button-ey7f5x-0 c6 c7"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c8"
              >
                <span
                  className="c18"
                >
                  <div
                    className="c10 c11"
                  >
                    <span
                      aria-hidden={true}
                      className="c13 c14"
                    >
                      <span
                        className="c19"
                      >
                        2
                      </span>
                    </span>
                    Time and risk
                  </div>
                </span>
              </span>
            </button>
            <ol
              className="c20"
            >
              <li
                className="c21 c22"
              >
                <div
                  className="c23"
                >
                  <button
                    className="NormalizedButton__Button-ey7f5x-0 c24"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="c8"
                    >
                      <span
                        className="c25"
                      >
                        <div
                          className="c12"
                        >
                          Completed
                        </div>
                        Investment period
                      </span>
                    </span>
                  </button>
                </div>
              </li>
              <li
                className="c21 c22"
              >
                <div
                  className="c23"
                >
                  <button
                    className="NormalizedButton__Button-ey7f5x-0 c24"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="c8"
                    >
                      <span
                        className="c13"
                      >
                        <div
                          className="c12"
                        >
                          Not completed
                        </div>
                        Frequency
                      </span>
                    </span>
                  </button>
                </div>
              </li>
              <li
                className="c21 c22"
              >
                <div
                  className="c23"
                >
                  <span
                    className="c25"
                  >
                    <div
                      className="c12"
                    >
                      Not completed
                    </div>
                    Amount
                  </span>
                </div>
              </li>
            </ol>
          </li>
          <li
            className="c4 c5"
          >
            <span
              className="c26"
            >
              <div
                className="c27 c11"
              >
                <div
                  className="c12"
                >
                  Not completed
                </div>
                <span
                  aria-hidden={true}
                  className="c13 c14"
                >
                  <span
                    className="c28"
                  >
                    3
                  </span>
                </span>
                Allocations
              </div>
            </span>
          </li>
        </ol>
      </div>
      <div
        className="c29"
      >
        <ol
          className="c30"
        >
          <li
            className="c4 c17"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c6 c31"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c8"
              >
                <span
                  className="c18"
                >
                  <div
                    className="c10 c11"
                  >
                    <div
                      className="c32"
                    >
                      <div
                        className="c33"
                      >
                        <span
                          aria-hidden={true}
                          className="c13 c14"
                        >
                          <span
                            className="c19"
                          >
                            2
                          </span>
                        </span>
                        Time and risk
                      </div>
                      <div
                        className="c33"
                      >
                        <svg
                          aria-hidden="true"
                          className="c34 c35"
                          direction="down"
                          focusable="false"
                          preserveAspectRatio="xMidYMid meet"
                          role="presentation"
                          viewBox="0 0 16 16"
                        >
                          <polygon
                            points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </span>
              </span>
            </button>
          </li>
        </ol>
      </div>
    </div>
  </div>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {
  .c0 {
    display: none;
  }
}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Multi Step Progress Is Sticky 1`] = `
.c9 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c20 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c25 {
  padding-left: 44px;
  padding-right: 12px;
}

.c2 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "sidebar";
  grid-template-rows: auto;
  grid-template-columns: 100fr;
  grid-gap: 8px;
  display: -ms-grid;
  -ms-grid-rows: auto;
  -ms-grid-columns: 100fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: sidebar;
}

.c34 {
  box-sizing: border-box;
  min-width: 0;
  display: none;
  grid-area: none;
}

.c30 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 {
  box-sizing: border-box;
}

.c11 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c32 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c33 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c26 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c35 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c16 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c16,
.c16[type='button'],
.c16[type='reset'],
.c16[type='submit'] {
  -webkit-appearance: button;
}

.c16::-moz-focus-inner,
.c16[type='button']::-moz-focus-inner,
.c16[type='reset']::-moz-focus-inner,
.c16[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c16:-moz-focusring,
.c16[type='button']:-moz-focusring,
.c16[type='reset']:-moz-focusring,
.c16[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c13 {
  position: absolute;
  top: 12px;
  left: 12px;
}

.c14 {
  width: 24px;
  height: 24px;
  background-color: #EBEBE8;
  color: #A0A09B;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  width: 24px;
  height: 24px;
  background-color: #0046FF;
  color: #FFFFFF;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c22 {
  list-style: none;
  margin: 0;
  padding: 0;
  padding-bottom: 12px;
}

.c24 {
  display: block;
}

.c24 + .c23 {
  padding-top: 8px;
}

.c5 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c28 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c7 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c7::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c15 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c15::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 1;
}

.c10 {
  position: relative;
}

.c17 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c29 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c29 > span {
  width: 100%;
}

.c3 {
  background: transparent;
  position: -webkit-sticky;
  position: sticky;
  top: 8px;
}

@media (min-width:760px) {
  .c9 {
    padding-left: 52px;
  }
}

@media (min-width:760px) {
  .c20 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c25 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c0 {
    grid-template-areas: "sidebar page";
    grid-template-columns: 1fr 2fr;
    grid-gap: 20px;
    display: -ms-grid;
    -ms-grid-rows: 1fr;
    -ms-grid-columns: 1fr 20px 2fr;
  }
}

@media (min-width:760px) {
  .c1 {
    -ms-grid-row: 1;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: sidebar;
  }
}

@media (min-width:760px) {
  .c34 {
    -ms-grid-row: 1;
    -ms-grid-column: 3;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: page;
  }
}

@media not all and (min-width:976px) {
  .c4 {
    display: none;
  }
}

@media not all and (max-width:975px) {
  .c27 {
    display: none;
  }
}

@media (min-width:760px) {
  .c13 {
    left: 20px;
  }
}

@media (max-width:975px) {
  .c7 + .c6 {
    border-top: 1px solid #EBEBE8;
  }
}

@media (min-width:976px) {
  .c7 + .c6 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c15 + .c6 {
    border-top: 1px solid #EBEBE8;
  }
}

@media (min-width:976px) {
  .c15 + .c6 {
    margin-top: 8px;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="CssGrid__RawCssGridItem-bu5cxy-1 c1"
    >
      <div
        className="c2 c3"
      >
        <div
          aria-label="Progress"
          role="group"
        >
          <div
            className="c4"
          >
            <ol
              className="c5"
            >
              <li
                className="c6 c7"
              >
                <span
                  className="c8"
                >
                  <div
                    className="c9 c10"
                  >
                    <div
                      className="c11"
                    >
                      Not completed
                    </div>
                    <span
                      aria-hidden={true}
                      className="c12 c13"
                    >
                      <span
                        className="c14"
                      >
                        1
                      </span>
                    </span>
                    Investment objective
                  </div>
                </span>
              </li>
              <li
                className="c6 c15"
              >
                <button
                  className="NormalizedButton__Button-ey7f5x-0 c16 c17"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c18"
                  >
                    <span
                      className="c19"
                    >
                      <div
                        className="c20 c10"
                      >
                        <span
                          aria-hidden={true}
                          className="c12 c13"
                        >
                          <span
                            className="c21"
                          >
                            2
                          </span>
                        </span>
                        Time and risk
                      </div>
                    </span>
                  </span>
                </button>
                <ol
                  className="c22"
                >
                  <li
                    className="c23 c24"
                  >
                    <div
                      className="c25"
                    >
                      <span
                        className="c26"
                      >
                        <div
                          className="c11"
                        >
                          Not completed
                        </div>
                        Investment period
                      </span>
                    </div>
                  </li>
                  <li
                    className="c23 c24"
                  >
                    <div
                      className="c25"
                    >
                      <span
                        className="c26"
                      >
                        <div
                          className="c11"
                        >
                          Not completed
                        </div>
                        Frequency
                      </span>
                    </div>
                  </li>
                  <li
                    className="c23 c24"
                  >
                    <div
                      className="c25"
                    >
                      <span
                        className="c26"
                      >
                        <div
                          className="c11"
                        >
                          Not completed
                        </div>
                        Amount
                      </span>
                    </div>
                  </li>
                </ol>
              </li>
              <li
                className="c6 c7"
              >
                <span
                  className="c8"
                >
                  <div
                    className="c9 c10"
                  >
                    <div
                      className="c11"
                    >
                      Not completed
                    </div>
                    <span
                      aria-hidden={true}
                      className="c12 c13"
                    >
                      <span
                        className="c14"
                      >
                        3
                      </span>
                    </span>
                    Allocations
                  </div>
                </span>
              </li>
            </ol>
          </div>
          <div
            className="c27"
          >
            <ol
              className="c28"
            >
              <li
                className="c6 c15"
              >
                <button
                  aria-expanded={false}
                  className="NormalizedButton__Button-ey7f5x-0 c16 c29"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c18"
                  >
                    <span
                      className="c19"
                    >
                      <div
                        className="c20 c10"
                      >
                        <div
                          className="c30"
                        >
                          <div
                            className="c31"
                          >
                            <span
                              aria-hidden={true}
                              className="c12 c13"
                            >
                              <span
                                className="c21"
                              >
                                2
                              </span>
                            </span>
                            Time and risk
                          </div>
                          <div
                            className="c31"
                          >
                            <svg
                              aria-hidden="true"
                              className="c32 c33"
                              direction="down"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              viewBox="0 0 16 16"
                            >
                              <polygon
                                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </span>
                  </span>
                </button>
              </li>
            </ol>
          </div>
        </div>
      </div>
      <div
        className="c27"
      />
    </div>
    <div
      className="CssGrid__RawCssGridItem-bu5cxy-1 c34"
    >
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
      <span
        className="c35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Multi Step Progress Not Started Multi Step Progress 1`] = `
Array [
  .c7 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c18 {
  padding-left: 44px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
}

.c23 {
  padding-left: 44px;
  padding-right: 12px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c28 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c29 {
  box-sizing: border-box;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c30 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c31 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c24 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c11 {
  position: absolute;
  top: 12px;
  left: 12px;
}

.c12 {
  width: 24px;
  height: 24px;
  background-color: #EBEBE8;
  color: #A0A09B;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c19 {
  width: 24px;
  height: 24px;
  background-color: #0046FF;
  color: #FFFFFF;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  list-style: none;
  margin: 0;
  padding: 0;
  padding-bottom: 12px;
}

.c22 {
  display: block;
}

.c22 + .c21 {
  padding-top: 8px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c26 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c5::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c13 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
}

.c13::before {
  content: '';
  display: block;
  background: #0046FF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 1;
}

.c8 {
  position: relative;
}

.c15 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c27 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c27 > span {
  width: 100%;
}

.c1 {
  background: transparent;
}

@media (min-width:760px) {
  .c7 {
    padding-left: 52px;
  }
}

@media (min-width:760px) {
  .c18 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c23 {
    padding-left: 52px;
    padding-right: 20px;
  }
}

@media not all and (min-width:976px) {
  .c2 {
    display: none;
  }
}

@media not all and (max-width:975px) {
  .c25 {
    display: none;
  }
}

@media (min-width:760px) {
  .c11 {
    left: 20px;
  }
}

@media (max-width:975px) {
  .c5 + .c4 {
    border-top: 1px solid #EBEBE8;
  }
}

@media (min-width:976px) {
  .c5 + .c4 {
    margin-top: 8px;
  }
}

@media (max-width:975px) {
  .c13 + .c4 {
    border-top: 1px solid #EBEBE8;
  }
}

@media (min-width:976px) {
  .c13 + .c4 {
    margin-top: 8px;
  }
}

<div
    className="c0 c1"
  >
    <div
      aria-label="Progress"
      role="group"
    >
      <div
        className="c2"
      >
        <ol
          className="c3"
        >
          <li
            className="c4 c5"
          >
            <span
              className="c6"
            >
              <div
                className="c7 c8"
              >
                <div
                  className="c9"
                >
                  Not completed
                </div>
                <span
                  aria-hidden={true}
                  className="c10 c11"
                >
                  <span
                    className="c12"
                  >
                    1
                  </span>
                </span>
                Investment objective
              </div>
            </span>
          </li>
          <li
            className="c4 c13"
          >
            <button
              className="NormalizedButton__Button-ey7f5x-0 c14 c15"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c16"
              >
                <span
                  className="c17"
                >
                  <div
                    className="c18 c8"
                  >
                    <span
                      aria-hidden={true}
                      className="c10 c11"
                    >
                      <span
                        className="c19"
                      >
                        2
                      </span>
                    </span>
                    Time and risk
                  </div>
                </span>
              </span>
            </button>
            <ol
              className="c20"
            >
              <li
                className="c21 c22"
              >
                <div
                  className="c23"
                >
                  <span
                    className="c24"
                  >
                    <div
                      className="c9"
                    >
                      Not completed
                    </div>
                    Investment period
                  </span>
                </div>
              </li>
              <li
                className="c21 c22"
              >
                <div
                  className="c23"
                >
                  <span
                    className="c24"
                  >
                    <div
                      className="c9"
                    >
                      Not completed
                    </div>
                    Frequency
                  </span>
                </div>
              </li>
              <li
                className="c21 c22"
              >
                <div
                  className="c23"
                >
                  <span
                    className="c24"
                  >
                    <div
                      className="c9"
                    >
                      Not completed
                    </div>
                    Amount
                  </span>
                </div>
              </li>
            </ol>
          </li>
          <li
            className="c4 c5"
          >
            <span
              className="c6"
            >
              <div
                className="c7 c8"
              >
                <div
                  className="c9"
                >
                  Not completed
                </div>
                <span
                  aria-hidden={true}
                  className="c10 c11"
                >
                  <span
                    className="c12"
                  >
                    3
                  </span>
                </span>
                Allocations
              </div>
            </span>
          </li>
        </ol>
      </div>
      <div
        className="c25"
      >
        <ol
          className="c26"
        >
          <li
            className="c4 c13"
          >
            <button
              aria-expanded={false}
              className="NormalizedButton__Button-ey7f5x-0 c14 c27"
              onClick={[Function]}
              type="button"
            >
              <span
                className="c16"
              >
                <span
                  className="c17"
                >
                  <div
                    className="c18 c8"
                  >
                    <div
                      className="c28"
                    >
                      <div
                        className="c29"
                      >
                        <span
                          aria-hidden={true}
                          className="c10 c11"
                        >
                          <span
                            className="c19"
                          >
                            2
                          </span>
                        </span>
                        Time and risk
                      </div>
                      <div
                        className="c29"
                      >
                        <svg
                          aria-hidden="true"
                          className="c30 c31"
                          direction="down"
                          focusable="false"
                          preserveAspectRatio="xMidYMid meet"
                          role="presentation"
                          viewBox="0 0 16 16"
                        >
                          <polygon
                            points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </span>
              </span>
            </button>
          </li>
        </ol>
      </div>
    </div>
  </div>,
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media not all and (min-width:976px) {

}

@media not all and (max-width:975px) {
  .c0 {
    display: none;
  }
}

@media (min-width:760px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {

}

<div
    className="c0"
  />,
]
`;
